--- a/app/globals.css
+++ b/app/globals.css
@@ -8,6 +8,10 @@
   --background-end-rgb: 255, 255, 255;
 }
 
+html, body, main {
+  height: 100%;
+}
+
 @media (prefers-color-scheme: dark) {
   :root {
     --foreground-rgb: 255, 255, 255;
@@ -24,6 +28,10 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+}
+
+h1 {
+  font-size: x-large;
 }
 
 @layer utilities {
